 gpgme_set_ctx_flag                      EXTENDED: New flag 'import-options'.
 cpp: Context::EncryptFile               NEW.
 cpp: SignatureMode::SignFile            NEW.
 cpp: RevocationKey                      NEW.
 cpp: Key::revocationKey                 NEW.
 cpp: Key::numRevocationKeys             NEW.
 cpp: Key::revocationKeys                NEW.
 cpp: Error::asStdString                 NEW.
 qt: DecryptVerifyJob::setInputFile      NEW.
 qt: DecryptVerifyJob::inputFile         NEW.
 qt: DecryptVerifyJob::setOutputFile     NEW.
 qt: DecryptVerifyJob::outputFile        NEW.
 qt: EncryptJob::setRecipients           NEW.
 qt: EncryptJob::recipients              NEW.
 qt: EncryptJob::setInputFile            NEW.
 qt: EncryptJob::inputFile               NEW.
 qt: EncryptJob::setOutputFile           NEW.
 qt: EncryptJob::outputFile              NEW.
 qt: EncryptJob::setEncryptionFlags      NEW.
 qt: EncryptJob::encryptionFlags         NEW.
 qt: SignEncryptJob::setSigners          NEW.
 qt: SignEncryptJob::signers             NEW.
 qt: SignEncryptJob::setRecipients       NEW.
 qt: SignEncryptJob::recipients          NEW.
 qt: SignEncryptJob::setInputFile        NEW.
 qt: SignEncryptJob::inputFile           NEW.
 qt: SignEncryptJob::setOutputFile       NEW.
 qt: SignEncryptJob::outputFile          NEW.
 qt: SignEncryptJob::setEncryptionFlags  NEW.
 qt: SignEncryptJob::encryptionFlags     NEW.
 qt: SignJob::setSigners                 NEW.
 qt: SignJob::signers                    NEW.
 qt: SignJob::setInputFile               NEW.
 qt: SignJob::inputFile                  NEW.
 qt: SignJob::setOutputFile              NEW.
 qt: SignJob::outputFile                 NEW.
 qt: SignJob::setSigningFlags            NEW.
 qt: SignJob::signingFlags               NEW.
 qt: SignJob::setAppendSignature         NEW.
 qt: SignJob::appendSignatureEnabled     NEW.
 qt: VerifyDetachedJob::setSignatureFile NEW.
 qt: VerifyDetachedJob::signatureFile    NEW.